--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "puppeteer": "^21.5.2",
     "ts-node-dev": "^2.0.0"
   },
   "devDependencies": {
